--- a/front/views/fragments/header_home.pug
+++ b/front/views/fragments/header_home.pug
@@ -20,9 +20,7 @@ header
                 i.fas.fa-shopping-bag
                 | #{' '}Recomendaciones
             li(role='menuitem')
-              a(href='/preference-artists') Agregar artistas
-            li(role='menuitem')
-              a(href='/preference-tracks') Agregar tracks
+              a(href='/preference') Agregar preferencias
 
   .show-xs
     nav.navbar.primary.shadow.fixed.top
@@ -49,9 +47,7 @@ header
             i.fas.fa-shopping-bag
             | #{' '}Recomendaciones
         li(role='menuitem')
-          a(href='/preference-artists') Agregar artistas
-        li(role='menuitem')
-          a(href='/preference-tracks') Agregar tracks
+          a(href='/preference') Agregar preferencias
         li(role='menuitem')
           a(href='/cerrar-sesion')
             i.fas.fa-sign-out-alt
