--- a/front/views/pages/recomendations/preferences.pug
+++ b/front/views/pages/recomendations/preferences.pug
@@ -6,7 +6,7 @@ block content
       .col-xs-12
         nav.breadcrumb.ph-3.small.uppercase
           a.b.item(href=`/`) INICIO
-          a.b.item(href=`/preference-artists`) PREFERENCIA-ARTISTA
+          a.b.item(href=`/preference`) PREFERENCIA
 
   .container
     p Welcome to to #{userProfile.email}!
@@ -18,20 +18,20 @@ block content
           .p-3
             .msg.error#form-results
             .row
-              form.col-xs-12(id="preferencesForm" action=config.apiUrl+`/controllers/preferences-artists-controller/` method="post" data-error="#form-results")
+              form.col-xs-12(id="preferencesForm" action=`/controllers/preferences-controller/` method="post" data-error="#form-results")
                 table(style='width:100%', border='1')
                     tr
                         th Id
-                        th idhash
-                        th Nombre
+                        th Title
+                        th Genres
                         th Me interesa o no
                     each variable in artists
                         tr
                             td #{variable.id}
-                            td #{variable.music_artist_id}
-                            td #{variable.music_artist_name}
+                            td #{variable.title}
+                            td #{variable.genres}
                             td 
-                                input(type='checkbox' value=`${variable.music_artist_name}` name='artists')
+                                input(type='checkbox' value=`${variable.id}` name='artists')
                 .row
                   .col-xs-12.tr
                     button.primary.w-100-xs(type="submit") Guardar preferencias
